[package]
name = "parity-bytes"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "byte utilities for Parity"
license = "MIT/Apache2.0"
edition = "2018"

[dependencies]

[features]
default = ["std"]
std = []
