[package]
name = "parity-bytes"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "byte utilities for Parity"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]

[features]
default = ["std"]
std = []
