[package]
name = "parity-crypto"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
description = "Crypto utils used by ethstore and network."
license = "MIT/Apache-2.0"
autobenches = false
edition = "2018"

[[bench]]
name = "bench"
harness = false
required-features = ["publickey"]

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
scrypt = { version = "0.2.0", default-features = false }
secp256k1 = { version = "0.17.2", optional = true, features = ["recovery", "rand-std"] }
ethereum-types = { version = "0.8.0", optional = true }
lazy_static = { version = "1.0", optional = true }
ripemd160 = "0.8.0"
sha2 = "0.8.0"
digest = "0.8"
hmac = "0.7"
aes = "0.3.2"
aes-ctr = "0.3.0"
block-modes = "0.3.3"
pbkdf2 = "0.3.0"
subtle = "2.2.1"
zeroize = { version = "1.0.0", default-features = false }
rand = "0.7.2"
rustc-hex = { version = "2.1.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3.0"
hex-literal = "0.2.1"

[features]
default = []
# public key crypto utils
# moved from ethkey module in parity ethereum repository
publickey = ["secp256k1", "lazy_static", "ethereum-types", "rustc-hex"]
