[package]
name = "parity-hash"
description = "A collection of fixed-size byte array representations"
version = "1.2.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
keywords = ["hash", "uint"]
repository = "https://github.com/paritytech/parity-common/parity-hash"
homepage = "https://github.com/paritytech/parity-common"
categories = [ "no-std"]

[dependencies]
uint = "0.4"
rustc-hex = { version = "2.0", default-features = false}
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["uint/std"]
serialize = ["serde", "serde_derive"]
