[package]
name = "parity-wasm-compat"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-common"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.4"
threadpool = "1.7"
home = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Crypto"], optional = true }
rand = "0.5"


[features]
default=["browser-wasm"]
browser-wasm=["web-sys"]
extrinsic-wasm=[]
node-wasm=[]
