[package]
name = "patricia-trie"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie generic over key hasher and node encoding"
repository = "https://github.com/paritytech/parity-common"
license = "GPL-3.0"

[dependencies]
elastic-array = "0.10"
log = "0.3"
rand = "0.4"
hashdb = { version = "0.2", path = "../hashdb" }
parity-bytes = { version = "0.1", path = "../parity-bytes" }

[dev-dependencies]
env_logger = "0.5"
ethereum-types = "0.4"
tiny-keccak = "1.4"
keccak-hash = { version = "0.1", path = "../keccak-hash" }
memorydb = { version = "0.2", path = "../memorydb", default-features = false }
rlp = { version = "0.2", path = "../rlp", default-features = false }
trie-standardmap = { version = "0.1", path = "../trie-standardmap", default-features = false }
triehash = { version = "0.2", path = "../triehash", default-features = false }
parity-bytes = { version = "0.1", path = "../parity-bytes" }
plain_hasher = { version = "0.2", path = "../plain_hasher", default-features = false }
