[package]
name = "patricia-trie"
version = "0.3.0-beta.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie generic over key hasher and node encoding"
repository = "https://github.com/paritytech/parity-common"
license = "GPL-3.0"

[dependencies]
elastic-array = "0.10"
log = "0.3"
rand = "0.4"
hashdb = { path = "../hashdb" }
parity-bytes = { path = "../parity-bytes" }

[dev-dependencies]
env_logger = "0.5"
ethereum-types = "0.4"
keccak-hash = { path = "../keccak-hash" }
memorydb = { path = "../memorydb", default-features = false }
rlp = { path = "../rlp", default-features = false }
trie-standardmap = { path = "../trie-standardmap", default-features = false }
triehash = { path = "../triehash", default-features = false }
parity-bytes = {  path = "../parity-bytes" }
patricia-trie-ethereum = { path = "../test-support/patricia-trie-ethereum" }
keccak-hasher = { path = "../test-support/keccak-hasher" }
