[package]
name = "plain_hasher"
description = "Hasher for 32-byte keys."
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
keywords = ["hash", "hasher"]
homepage = "https://github.com/paritytech/parity-common"
categories = [ "no-std"]

[dependencies]
crunchy = { version = "0.2.1", default-features = false }

[features]
default = ["std"]
std = ["crunchy/std"]
