[package]
name = "plain_hasher"
description = "Hasher for 32-byte keys."
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
keywords = ["hash", "hasher"]
homepage = "https://github.com/paritytech/parity-common"
categories = ["no-std"]
edition = "2018"

[dependencies]
crunchy = { version = "0.2.2", default-features = false }

[dev-dependencies]
criterion = "0.3.0"

[features]

[[bench]]
name = "bench"
harness = false
