[package]
name = "primitive-types"
version = "0.13.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paritytech/parity-common"
repository = "https://github.com/paritytech/parity-common"
description = "Primitive types shared by Ethereum and Substrate"
edition = "2021"
rust-version = "1.64.0"

[dependencies]
fixed-hash = { path = "../fixed-hash", version = "0.8", default-features = false }
uint = { path = "../uint", version = "0.10.0", default-features = false }
impl-serde = { path = "impls/serde", version = "0.5.0", default-features = false, optional = true }
impl-codec = { path = "impls/codec", version = "0.7.0", default-features = false, optional = true }
impl-num-traits = {  path = "impls/num-traits", version = "0.2.0",default-features = false, optional = true }
impl-rlp = { path = "impls/rlp", version = "0.4", default-features = false, optional = true }
scale-info-crate = { package = "scale-info", version = ">=0.9, <3", features = ["derive"], default-features = false, optional = true }
schemars = { version = ">=0.8.12", default-features = true, optional = true }

[dev-dependencies]
num-traits = "0.2"
serde_json = { version = "1.0", default-features = false }
jsonschema = { version = "0.17", default-features = false }

[features]
default = ["std", "rand"]
std = ["uint/std", "fixed-hash/std", "impl-codec?/std"]
rand = ["fixed-hash/rand"]
serde = ["std", "impl-serde", "impl-serde/std"]
json-schema = ["dep:schemars"]
serde_no_std = ["impl-serde"]
codec = ["impl-codec"]
scale-info = ["codec", "scale-info-crate"]
rlp = ["impl-rlp"]
arbitrary = ["fixed-hash/arbitrary", "uint/arbitrary"]
fp-conversion = ["std"]
num-traits = ["impl-num-traits"]

[[test]]
name = "scale_info"
required-features = ["scale-info"]

[[test]]
name = "fp_conversion"
required-features = ["fp-conversion"]

[[test]]
name = "num_traits"
required-features = ["num-traits"]
