[package]
name = "primitive-types"
version = "0.14.0"
description = "Primitive types shared by Ethereum and Substrate"
rust-version = "1.79.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
fixed-hash = { workspace = true }
uint = { workspace = true }
impl-serde = { workspace = true, optional = true }
impl-codec = { workspace = true, optional = true }
impl-num-traits = { workspace = true, optional = true }
impl-rlp = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
num-traits = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }

[features]
default = ["std", "rand"]
std = ["uint/std", "fixed-hash/std", "impl-codec?/std"]
rand = ["fixed-hash/rand"]
rustc-hex = ["fixed-hash/rustc-hex"]
serde = ["std", "impl-serde", "impl-serde/std"]
json-schema = ["dep:schemars"]
serde_no_std = ["impl-serde"]
codec = ["impl-codec"]
scale-info = ["codec", "dep:scale-info"]
rlp = ["impl-rlp"]
arbitrary = ["fixed-hash/arbitrary", "uint/arbitrary"]
fp-conversion = ["std"]
num-traits = ["impl-num-traits"]

[[test]]
name = "scale_info"
required-features = ["scale-info"]

[[test]]
name = "fp_conversion"
required-features = ["fp-conversion"]

[[test]]
name = "num_traits"
required-features = ["num-traits"]
