[package]
name = "rlp-derive"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
description = "Derive macro for #[derive(RlpEncodable, RlpDecodable)]"
homepage = "http://parity.io"
edition = "2021"
rust-version = "1.56.1"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.72"
quote = "1.0.2"
proc-macro2 = "1.0.8"

[dev-dependencies]
rlp = { version = "0.6.0", path = "../rlp" }
