[package]
name = "rlp-derive"
version = "0.2.0"
description = "Derive macro for #[derive(RlpEncodable, RlpDecodable)]"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.72"
quote = "1.0.2"
proc-macro2 = "1.0.8"

[dev-dependencies]
rlp = { version = "0.6.0", path = "../rlp" }
