[package]
name = "rlp-derive"
version = "0.2.0"
description = "Derive macro for #[derive(RlpEncodable, RlpDecodable)]"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
rlp = { workspace = true }
