[package]
name = "rlp"
version = "0.5.2"
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/paritytech/parity-common"
license = "MIT OR Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
bytes = { version = "1", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
rlp-derive = { version = "0.1", path = "../rlp-derive", optional = true }

[dev-dependencies]
criterion = "0.5.1"
hex-literal = "0.4.1"
primitive-types = { path = "../primitive-types", version = "0.12", features = ["impl-rlp"] }

[features]
default = ["std"]
std = ["bytes/std", "rustc-hex/std"]
derive = ["rlp-derive"]

[[bench]]
name = "rlp"
path = "benches/rlp.rs"
harness = false
