[package]
name = "rlp"
version = "0.6.1"
description = "Recursive-length prefix encoding, decoding, and compression"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = { version = "1", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
rlp-derive = { version = "0.2", path = "../rlp-derive", optional = true }

[dev-dependencies]
criterion = "0.5.1"
hex-literal = "0.4.1"
primitive-types = { path = "../primitive-types", version = "0.13", features = ["impl-rlp"] }

[features]
default = ["std"]
std = ["bytes/std", "rustc-hex/std"]
derive = ["rlp-derive"]

[[bench]]
name = "rlp"
path = "benches/rlp.rs"
harness = false
