[package]
name = "rlp"
version = "0.6.1"
description = "Recursive-length prefix encoding, decoding, and compression"
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = { workspace = true }
rustc-hex = { workspace = true }
rlp-derive = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
hex-literal = { workspace = true }
primitive-types = { workspace = true, default-features = true, features = ["impl-rlp"] }

[features]
default = ["std"]
std = ["bytes/std", "rustc-hex/std"]
derive = ["rlp-derive"]

[[bench]]
name = "rlp"
path = "benches/rlp.rs"
harness = false
